kubernetes/image-service/image-service-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: image-service
  labels:
    app: image-service
spec:
  replicas: 5
  selector:
    matchLabels:
      app: image-service
  template:
    metadata:
      labels:
        app: image-service
    spec:
      containers:
        - name: image-service
          image: 'image-service:dev'
          ports:
            - name: http
              containerPort: 5000
