kubernetes/image-service/image-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-service
spec:
  ports:
    - name: http
      targetPort: 5000
      port: 80
  selector:
    app: image-service
