kubernetes/image-service/image-service-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: image-service
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: image-service.minikube
      http:
        paths:
          - backend:
              serviceName: image-service
              servicePort: http
